# Nanotekspice

./: CMakeLists.txt  Makefile  Prompt.hpp  a.out  adder.nts  and.nts  lolo  nand.nts  nanotekspice  prompt.cpp
basics/: 5input_and.nts  adder.nts  and.nts  nand.nts
components/include/: 4001.hpp  4008.hpp  4011.hpp  4013.hpp  4017.hpp  4030.hpp  4069.hpp  4071.hpp  4081.hpp  4094.hpp  4514.hpp  Input.hpp  Output.hpp
components/srcs/: 4001.cpp  4008.cpp  4011.cpp  4013.cpp  4017.cpp  4030.cpp  4069.cpp  4071.cpp  4081.cpp  4094.cpp  4514.cpp  Input.cpp  Output.cpp
include/: 4081.hpp  AComponent.hpp  Components.hpp  ErrorManage.hpp  Gate.hpp  IComponent.hpp  Input.hpp  Link.hpp  Parser.hpp  Pin.hpp  Prompt.hpp  gate.hpp  prompt.hpp
srcs/: 4081.cpp  4081.hpp  AComponent.cpp  AComponent.hpp  Components.cpp  ErrorManage.cpp  Gate.cpp  IComponent.hpp  Input.cpp  Input.hpp  Link.cpp  Main.cpp  Parser.cpp  Prompt.cpp  a.out  gate.cpp  main.cpp  prompt.cpp  prompt.hpp  t_main.cpp  test.cpp
